@@ -63,6 +63,7 @@ abstract class AbstractCommandBuilder<T extends AbstractCommandBuilder<T>> imple
         // Keep them alphabetical to avoid the code history getting confused by reordering commits
         final ArrayList<String> modularJavaOpts = new ArrayList<>();
         if (!Boolean.parseBoolean(System.getProperty("launcher.skip.jpms.properties", "false"))) {
+            modularJavaOpts.add("--enable-preview");
             modularJavaOpts.add("--add-exports=java.desktop/sun.awt=ALL-UNNAMED");
             modularJavaOpts.add("--add-exports=java.naming/com.sun.jndi.ldap=ALL-UNNAMED");
             modularJavaOpts.add("--add-exports=java.naming/com.sun.jndi.url.ldap=ALL-UNNAMED");
